@@ -4,6 +4,8 @@ Release v1.2.4, XXXX
   * added pyhf support
   * pickle path bug fix
   * bug fix for parallel xseccomputers
+  * Introduced the SMODELS_CACHEDIR environment variable to allow for a different
+    location of the cached database file
 
 Release v1.2.3, Mon 27 Apr 2020
 =======================================================
@@ -51,13 +53,13 @@ Release v1.1.3, Wed 08 Aug 2018
     topologies to total theory prediction
   * Database path allows URLs
   * Python default changed from python2 to python3
-  * Fixed lastUpdate bug, now giving correct date 
+  * Fixed lastUpdate bug, now giving correct date
   * Changes in pickling (e.g. subpickling, removing redundant zeroes)
   * smodelsTools.py now has fixpermissions, for system-wide installs
   * fixed small issue with pair production of even particles
   * Moved the code documentation to the manual
   * Added option for installing within the source folder
- 
+
 Release v1.1.2, Fri 02 Mar 2018
 =======================================================
 
